--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2001-12-31  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
+	* gui/ui/oprof_start.base.ui:
+	* doc/oprofile.sgml:
+	* doc/oprofile.1.in: small updates
+ 
+	* oprofile.c: more detail on locking requirements for wake_up
+ 
+2001-12-31  Michel Dagenais  <michel.dagenais@polymtl.ca>
+
+	* gui/oprof_start.cpp:
+	* gui/oprof_start.h: show total samples so far
+ 
 2001-12-29  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/oprofiled.c:
