--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-01  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.sgml: clarify that -g is not necessary for
+	  basic profiling (reported by Jeff Epler <jepler@inetnebr.com>)
+ 
 2001-12-31  Philippe Elie  <ph_e@club-internet.fr>
 
 	* module/op_init.c:
