--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
 
+	* config.h.in: remove this again from CVS.
+ 
+2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/op_stop: send SIGUSR1 to stop profiler
  
 	* dae/opd_proc.c: reformat a little
@@ -150,7 +154,7 @@
 
 2001-12-22  Dave Jones <davej@suse.de>
 
-	* Config.h.in: Readd to CVS.
+	* config.h.in: Readd to CVS.
 
 2001-12-18  Dave Jones <davej@suse.de>
 
