--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/oprofiled.c: better enable the actual
+	  profiling again :P
+ 
+2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
+
 	* config.h.in: remove this again from CVS.
  
 2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
