--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
 
+	* doc/oprofile.sgml: various docs improvements
+ 
+2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/oprofiled.c: better enable the actual
 	  profiling again :P
  
