--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-03  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/opd_util.c: allow EAGAINs through as well
+ 
 2002-01-02  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_container.cpp:
