--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-03  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/oprofile.sgml: improve documentation, corrected
+	  by John Levon
+
 2002-01-03  John Levon  <moz@compsoc.man.ac.uk>
 
 	* gui/oprof_start.h:
