--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-03  Philippe Elie  <ph_e@club-internet.fr>
+
+	* dae/opd_proc.c: Apologies: stupid bug. Never forget
+	  than LRU list of samples files must not contain already
+  	  unmaped files
+
+	* module/oprofile.c: another silly bug, detected cpu was
+	  overwritten...
+
 2002-01-03  John Levon  <moz@compsoc.man.ac.uk>
 
 	* doc/oprofile.sgml: some fixes, comments
