--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: update
+
+	* dae/oprofiled.c:
+	* dae/oprofiled.h:
+	* dae/opd_proc.c: print stats on shutdown too
+
+	* module/oprofile.c: additional check against daemon hanging on shutdown :(
+ 
+2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/op_stop:
 	* dae/oprofiled.c:
 	* doc/oprofile.sgml:
