--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/opd_proc.c: minor crap
+ 
+2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
+
 	* TODO: update
 
 	* dae/oprofiled.c:
