--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-04  Philippe Elie  <ph_e@club-internet.fr>
+
+	* dae/Makefile.in: fix opd_kernel.c dependancy
+
 2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/Makefile.in:
