--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-01-05  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/op_start:
+	* dae/op_stop: (very) hacky loop to wait for
+	daemon start and stop
+ 
+2002-01-05  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/oprofile.c: revert my broken stop fix,
 	  and fix the old (new) one
  
