--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-07  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
 2002-01-05  Philippe Elie  <ph_e@club-internet.fr>
 
 	* doc/oprofile.sgml: Avoid to use -- inside
