--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-01-07  John Levon  <moz@compsoc.man.ac.uk>
 
+	* util/Makefile.in: "fix" last g++ 3.0 problem
+	  with libiberty.h and string.h clashing prototypes
+	  by disabling -pedantic for this directory
+ 
+2002-01-07  John Levon  <moz@compsoc.man.ac.uk>
+
 	* pp/opf_container.cpp:
 	* pp/opf_filter.h:
 	* pp/oprofpp.cpp: 
