add doc for --with-linux

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-11  John Levon  <moz@compsoc.man.ac.uk>
 
+	* doc/oprofile.sgml: add note about --with-linux
+ 
+2002-01-11  John Levon  <moz@compsoc.man.ac.uk>
+
 	* Rules.make.in:
 	* gui/Makefile.in:
 	* gui/oprof_start_config.h:
