--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-11  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: update
+ 
 	* gui/Makefile.in:
 	* gui/oprof_start.cpp: use absolute paths
  
