--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-11  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/oprofile.c: never return 0 unless we're
+	  really closing down
+ 
+2002-01-11  John Levon  <moz@compsoc.man.ac.uk>
+
 	* TODO: update
  
 	* gui/Makefile.in:
