--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-12  John Levon  <moz@compsoc.man.ac.uk>
+
+	* gui/oprof_start_util.h:
+	* gui/oprof_start_util.cpp: implement whitelist for arguments
+	  to op_start
+ 
+	* TODO: update
+ 
 2002-01-13  Philippe Elie  <ph_e@club-internet.fr>
 
 	* module/compat.h:
