--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
+
+	* gui/oprof_start_config.cpp: fix vmlinux/system.map defaults
+ 
 2002-01-13  Philippe Elie  <ph_e@club-internet.fr>
 
 	* configure.in: reject unsupported kernel version
