OK, step #1 to RTC interrupts. Each type of interrupt is hidden behind a operations struct. NMI seems to still work fine.
RTC is unfinished as is, and obviously all user-space needs to be changed
to detect cpu_type from sysctl on modprobe and change its behaviour appropriately.

Question is: what user setting should we allow for the RTC ??

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: update
+
+	* op_user.h: add CPU_RTC
+
+	* op_init.c: add FIXMEs
+
+	* op_nmi.c:
+	* op_rtc.c:
+	* oprofile.h:
+	* oprofile.c: implement abstract interrupt handler code
+
+2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
+
 	* gui/oprof_start_config.cpp: fix vmlinux/system.map defaults
  
 2002-01-13  Philippe Elie  <ph_e@club-internet.fr>
