--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/op_start: fix for PMC case
+ 
+2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
+
 	* TODO: update
 
 	* dae/op_start: take --rtc-value
