--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-14  Dave Jones <davej@suse.de>
+
+	* pp/op_time.cpp: fix for printing (NaN%) in the zero sample case.
+
 2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
 
 	* module/op_rtc.c: remove unneeded check
