--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/op_stop: fix "op_start && op_stop" bug using multiple
+	  dump_stop writes.
+ 
 2002-01-14  Dave Jones <davej@suse.de>
 
 	* pp/op_time.cpp: fix for printing (NaN%) in the zero sample case.
@@ -5,7 +10,7 @@
 2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
 
 	* module/op_rtc.c: remove unneeded check
- 
+
 2002-01-14  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/op_start: fix for PMC case
