--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/oprofile.h: clean up
+ 
+	* module/compat.h:
+	* module/compat22.h:
+	* module/compat24.h: split header files up
+	  for readability
+ 
 2002-01-17  Philippe Elie  <ph_e@club-internet.fr>
 
 	* TODO: update
