--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
+	* doc/oprofile.sgml: clarification
+ 
+	* module/compat22.h:
+	* module/compat24.h:
+	* module/oprofile.c: ->owner fixes
+ 
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/oprofile.h: clean up
  
 	* module/compat.h:
