--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: update
+
+	* oprofile.c:
+	* module/compat24.h: 
+	* module/compat22.h: fix compile, nmi wake up check
+	 
+	* module/op_rtc.c: user/kernel profiling feature
+ 
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
 	* doc/oprofile.sgml: clarification
  
 	* module/compat22.h:
