--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/compat24.h: define to have ->owner
+ 
 2002-01-17  Philippe Elie  <ph_e@club-internet.fr>
 
 	* gui/oprof_start.h:
