--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/Makefile.in:
+	* module/oprofile_nmi.S:
+	* module/oprofile_nmi22.S:
+	* module/oprofile_nmi24.S: split assembly for 2.2/4 
+
+	* module/compat.h:
+	* module/compat22.h:
+	* module/compat24.h: s/AFTER/ATLEAST/
+ 
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/compat24.h: define to have ->owner
  
 2002-01-17  Philippe Elie  <ph_e@club-internet.fr>
