--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/compat22.h:
+	* module/compat24.h:
+	* module/op_syscalls.c: whoops, handy to lock the
+	  BKL when it is necessary.
+ 
+	* dae/oprofiled.c: fix warning
+ 
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
 	* op_user.h:
 	* dae/op_start:
 	* gui/oprof_start_config.h:
