--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/compat.c: don't need to re-take BKL for
+	  d_path on 2.2
+ 
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/compat22.h:
 	* module/compat24.h:
 	* module/op_syscalls.c: we mustn't take the mmap sem
