--- a/TODO
+++ b/TODO
@@ -5,9 +5,7 @@
 
  o check UP kernel on SMP hardware with and without APIC config options 
  
- o 	./pp/op_time.cpp:79:/* FIXME: -h means help not shared libs !!!! */
-	./module/compat22.h:167:        /* 2.2.18 introduced vmalloc_32, FIXME is old vmalloc equivalent */
-	./module/compat22.h:26:/* FIXME: didn't this change in 2.2.21 ? */  
+ o 	./module/compat22.h:26:/* FIXME: didn't this change in 2.2.21 ? */  
 	./dae/opd_proc.c:1033:  /* FIXME: is this comment correct now we always apply the note buffer first ? */
 	./dae/opd_proc.c:1094:/* FIXME: what if we are remapping over an old mapping - we want to find this one first ! */ 
  
@@ -20,6 +18,13 @@
   or a file.
  
  o little output things (e.g. don't print unit mask) RTC
+
+ o add option like opf_filer -u -m to oprofpp -l|-L on a symbol basis.
+
+ o handle --help --version in op_popt.c
+
+ o doc say than all utility handle --help --version and remove it
+    same thing for all common options between oprofpp/opf_filter ?
  
 Before 1.0
 ----------
