--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-01-21  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/oprofile.c: 
+	* module/compat22.h:
+	* module/compat24.h: fix NMI wake-up for 2.2 SMP
+ 
+	* module/op_dcache.h: add KERN_ERR
+ 
+	* module/op_x86.c: cleanup a little
+ 
 2002-01-21  Philippe Elie  <ph_e@club-internet.fr>
 
 	* TODO: update
