--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-21  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/compat22.h: fix missing cli()
+ 
+2002-01-21  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/oprofile.c: 
 	* module/compat22.h:
 	* module/compat24.h: fix NMI wake-up for 2.2 SMP
