APIC / fixmap changes. Phil, this is slightly different from the one I sent you. I've module-loads-tested it on :
2.4.17UP - UP h/w

2.4.5UP - SMP h/w
2.4.5UP+CONFIG_X86_LOCAL_APIC - SMP h/w
2.4.5SMP - SMP h/w
2.2.16SMP - SMP h/w
2.2.16UP - SMP h/w

Everything looks OK to me !

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2002-01-22  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/Makefile.in:
+	* module/oprofile.h:
+	* module/oprofile.c:
+	* module/op_x86.c:
+	* module/op_apic.c:
+	* module/op_fixmap.c: split op_x86.c. Various changes to
+	  only enable the APIC if it's not, and to remap / map the APIC
+	  as is necessary.
+
+	* module/apic_up_compat.h: 
+	* module/compat.h:
+	* module/compat22.h: clean up V_*() macros
+
+	* module/op_init.c: remove FORCE_RTC
+ 
 2002-01-22  Philippe Elie  <ph_e@club-internet.fr>
 
 	* TODO: update
