--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-22  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/Makefile.in: can only depmod if we run that kernel
+ 
 	* module/op_fixmap.c: deal with no APIC config for
 	  2.4.10+
  
