--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-01-24  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/opd_proc.c: remove stale comment
+
+	* TODO: update
+
+	* module/compat.h:
+	* module/compat22.h:
+	* module/compat24.h: fix for pte_page on 2.2.20+
+ 
 2002-01-24  Philippe Elie  <ph_e@club-internet.fr>
 
 	* op_merge.cpp:
