--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-25  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/op_merge.cpp: minor fix + comment
+	* pp/op_time.cpp: comment, use samples_file_t
+	* pp/oprofpp.h:
+	* pp/oprofpp_util.cpp: minor change
+
 2002-01-24  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: remove stale comment
